--- a/digit_recognizer.ipynb
+++ b/digit_recognizer.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cài các thư viện cần thiết  \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.svm import SVC  \n",
@@ -13,22 +14,12 @@
     "from matplotlib import pyplot as plt\n",
     "from sklearn.preprocessing import scale\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import metrics\n"
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data = pd.read_csv('train.csv')\n",
-    "test_data = pd.read_csv('test.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -39,317 +30,62 @@
       "RangeIndex: 42000 entries, 0 to 41999\n",
       "Columns: 785 entries, label to pixel783\n",
       "dtypes: int64(785)\n",
-      "memory usage: 251.5 MB\n"
+      "memory usage: 251.5 MB\n",
+      "None\n",
+      "              label   pixel0   pixel1   pixel2   pixel3   pixel4   pixel5  \\\n",
+      "count  42000.000000  42000.0  42000.0  42000.0  42000.0  42000.0  42000.0   \n",
+      "mean       4.456643      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+      "std        2.887730      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+      "min        0.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+      "25%        2.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+      "50%        4.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+      "75%        7.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+      "max        9.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+      "\n",
+      "        pixel6   pixel7   pixel8  ...      pixel774      pixel775  \\\n",
+      "count  42000.0  42000.0  42000.0  ...  42000.000000  42000.000000   \n",
+      "mean       0.0      0.0      0.0  ...      0.219286      0.117095   \n",
+      "std        0.0      0.0      0.0  ...      6.312890      4.633819   \n",
+      "min        0.0      0.0      0.0  ...      0.000000      0.000000   \n",
+      "25%        0.0      0.0      0.0  ...      0.000000      0.000000   \n",
+      "50%        0.0      0.0      0.0  ...      0.000000      0.000000   \n",
+      "75%        0.0      0.0      0.0  ...      0.000000      0.000000   \n",
+      "max        0.0      0.0      0.0  ...    254.000000    254.000000   \n",
+      "\n",
+      "           pixel776     pixel777      pixel778      pixel779  pixel780  \\\n",
+      "count  42000.000000  42000.00000  42000.000000  42000.000000   42000.0   \n",
+      "mean       0.059024      0.02019      0.017238      0.002857       0.0   \n",
+      "std        3.274488      1.75987      1.894498      0.414264       0.0   \n",
+      "min        0.000000      0.00000      0.000000      0.000000       0.0   \n",
+      "25%        0.000000      0.00000      0.000000      0.000000       0.0   \n",
+      "50%        0.000000      0.00000      0.000000      0.000000       0.0   \n",
+      "75%        0.000000      0.00000      0.000000      0.000000       0.0   \n",
+      "max      253.000000    253.00000    254.000000     62.000000       0.0   \n",
+      "\n",
+      "       pixel781  pixel782  pixel783  \n",
+      "count   42000.0   42000.0   42000.0  \n",
+      "mean        0.0       0.0       0.0  \n",
+      "std         0.0       0.0       0.0  \n",
+      "min         0.0       0.0       0.0  \n",
+      "25%         0.0       0.0       0.0  \n",
+      "50%         0.0       0.0       0.0  \n",
+      "75%         0.0       0.0       0.0  \n",
+      "max         0.0       0.0       0.0  \n",
+      "\n",
+      "[8 rows x 785 columns]\n"
      ]
     }
    ],
    "source": [
-    "train_data.info()\n"
+    "# Load dữ liệu và khái quát hoá tập dữ liệu\n",
+    "train_data = pd.read_csv('train.csv')\n",
+    "test_data = pd.read_csv('test.csv')\n",
+    "print(train_data.info(), train_data.describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>pixel0</th>\n",
-       "      <th>pixel1</th>\n",
-       "      <th>pixel2</th>\n",
-       "      <th>pixel3</th>\n",
-       "      <th>pixel4</th>\n",
-       "      <th>pixel5</th>\n",
-       "      <th>pixel6</th>\n",
-       "      <th>pixel7</th>\n",
-       "      <th>pixel8</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pixel774</th>\n",
-       "      <th>pixel775</th>\n",
-       "      <th>pixel776</th>\n",
-       "      <th>pixel777</th>\n",
-       "      <th>pixel778</th>\n",
-       "      <th>pixel779</th>\n",
-       "      <th>pixel780</th>\n",
-       "      <th>pixel781</th>\n",
-       "      <th>pixel782</th>\n",
-       "      <th>pixel783</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>42000.000000</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>42000.000000</td>\n",
-       "      <td>42000.000000</td>\n",
-       "      <td>42000.000000</td>\n",
-       "      <td>42000.00000</td>\n",
-       "      <td>42000.000000</td>\n",
-       "      <td>42000.000000</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "      <td>42000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>4.456643</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.219286</td>\n",
-       "      <td>0.117095</td>\n",
-       "      <td>0.059024</td>\n",
-       "      <td>0.02019</td>\n",
-       "      <td>0.017238</td>\n",
-       "      <td>0.002857</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>2.887730</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.312890</td>\n",
-       "      <td>4.633819</td>\n",
-       "      <td>3.274488</td>\n",
-       "      <td>1.75987</td>\n",
-       "      <td>1.894498</td>\n",
-       "      <td>0.414264</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>254.000000</td>\n",
-       "      <td>254.000000</td>\n",
-       "      <td>253.000000</td>\n",
-       "      <td>253.00000</td>\n",
-       "      <td>254.000000</td>\n",
-       "      <td>62.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8 rows × 785 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              label   pixel0   pixel1   pixel2   pixel3   pixel4   pixel5  \\\n",
-       "count  42000.000000  42000.0  42000.0  42000.0  42000.0  42000.0  42000.0   \n",
-       "mean       4.456643      0.0      0.0      0.0      0.0      0.0      0.0   \n",
-       "std        2.887730      0.0      0.0      0.0      0.0      0.0      0.0   \n",
-       "min        0.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
-       "25%        2.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
-       "50%        4.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
-       "75%        7.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
-       "max        9.000000      0.0      0.0      0.0      0.0      0.0      0.0   \n",
-       "\n",
-       "        pixel6   pixel7   pixel8  ...      pixel774      pixel775  \\\n",
-       "count  42000.0  42000.0  42000.0  ...  42000.000000  42000.000000   \n",
-       "mean       0.0      0.0      0.0  ...      0.219286      0.117095   \n",
-       "std        0.0      0.0      0.0  ...      6.312890      4.633819   \n",
-       "min        0.0      0.0      0.0  ...      0.000000      0.000000   \n",
-       "25%        0.0      0.0      0.0  ...      0.000000      0.000000   \n",
-       "50%        0.0      0.0      0.0  ...      0.000000      0.000000   \n",
-       "75%        0.0      0.0      0.0  ...      0.000000      0.000000   \n",
-       "max        0.0      0.0      0.0  ...    254.000000    254.000000   \n",
-       "\n",
-       "           pixel776     pixel777      pixel778      pixel779  pixel780  \\\n",
-       "count  42000.000000  42000.00000  42000.000000  42000.000000   42000.0   \n",
-       "mean       0.059024      0.02019      0.017238      0.002857       0.0   \n",
-       "std        3.274488      1.75987      1.894498      0.414264       0.0   \n",
-       "min        0.000000      0.00000      0.000000      0.000000       0.0   \n",
-       "25%        0.000000      0.00000      0.000000      0.000000       0.0   \n",
-       "50%        0.000000      0.00000      0.000000      0.000000       0.0   \n",
-       "75%        0.000000      0.00000      0.000000      0.000000       0.0   \n",
-       "max      253.000000    253.00000    254.000000     62.000000       0.0   \n",
-       "\n",
-       "       pixel781  pixel782  pixel783  \n",
-       "count   42000.0   42000.0   42000.0  \n",
-       "mean        0.0       0.0       0.0  \n",
-       "std         0.0       0.0       0.0  \n",
-       "min         0.0       0.0       0.0  \n",
-       "25%         0.0       0.0       0.0  \n",
-       "50%         0.0       0.0       0.0  \n",
-       "75%         0.0       0.0       0.0  \n",
-       "max         0.0       0.0       0.0  \n",
-       "\n",
-       "[8 rows x 785 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -361,12 +97,13 @@
     }
    ],
    "source": [
+    "# Đếm số loại nhãn có trong dataset\n",
     "print(np.sort(train_data['label'].unique()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +112,7 @@
        "<AxesSubplot:xlabel='count', ylabel='label'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -391,12 +128,13 @@
     }
    ],
    "source": [
+    "# Vẽ đồ thị nhãn\n",
     "sns.countplot(y=train_data['label'], palette= 'icefire')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -756,12 +494,13 @@
        "[42000 rows x 784 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Đặt vector X là dữ liệu đầu vào và y là kết quả đầu ra\n",
     "y = train_data['label']\n",
     "X = train_data.drop(columns=['label'])\n",
     "X"
@@ -769,25 +508,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Chuẩn hoá dữ liệu  \n",
     "X = X/255.0\n",
     "test_data = test_data/255.0\n",
     "\n",
     "X_scaled = scale(X)\n",
     "\n",
-    "# train test split\n",
+    "# Tách dữ liệu\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size = 0.3, train_size = 0.2 ,random_state = 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Chọn mô hình SVC với kernel rbf\n",
     "model_linear = SVC(C=10, gamma=0.001, kernel=\"rbf\")\n",
     "model_linear.fit(X_train, y_train)\n",
     "\n",
@@ -797,20 +538,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.9438888888888889 \n",
-      "\n"
+      "Độ chính xác: 0.9439\n"
      ]
     }
    ],
    "source": [
-    "print(\"accuracy:\", metrics.accuracy_score(y_true=y_test, y_pred=y_pred))\n"
+    "# In ra độ chính xác của mô hình\n",
+    "print(\"Độ chính xác: %.4f\" % metrics.accuracy_score(y_true=y_test, y_pred=y_pred))"
    ]
   },
   {
